--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-<div class="container">
+  
+  <div class="container">
+    <h1>Search Albums on Spotify</h1>
   <div id="search">
   <input id ="userInput"/>
   <button id="searchB">Search</button>
