one last finish

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <body>
   
   <div class="container">
+    <div id="title">
+      <img id="logo" src="https://image.flaticon.com/icons/svg/2111/2111624.svg"/>
     <h1>Search Albums on Spotify</h1>
+  </div>
+    
   <div id="search">
   <input id ="userInput"/>
   <button id="searchB">Search</button>
